{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 66,
  "lineage": "d347f4c3-48e5-5676-6edb-f29391b3bacf",
  "resources": [
    {
      "module": "module.common",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:546848686991:security-group/sg-0c4805fdde496ce1a",
            "description": "mke cluster common rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4805fdde496ce1a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "alex-ostrich-59RGAE-common",
            "name_prefix": "",
            "owner_id": "546848686991",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-08bdd74f1e58694f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.network",
            "random_string.random"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.common",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "open_myip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "69.159.31.171/32"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-573211070",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c4805fdde496ce1a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.common.aws_security_group.common",
            "module.common.data.http.myip",
            "module.vpc.aws_vpc.network",
            "random_string.random"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "mke_manager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:546848686991:loadbalancer/net/alex-ostrich-59RGAE-manager-lb/dd77166de82c32f7",
            "arn_suffix": "net/alex-ostrich-59RGAE-manager-lb/dd77166de82c32f7",
            "dns_name": "alex-ostrich-59RGAE-manager-lb-dd77166de82c32f7.elb.us-west-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:546848686991:loadbalancer/net/alex-ostrich-59RGAE-manager-lb/dd77166de82c32f7",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "alex-ostrich-59RGAE-manager-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02376d5aad7190ea8"
              },
              {
                "subnet_id": "subnet-068c8ea5573c5f90b"
              },
              {
                "subnet_id": "subnet-06b40bd069c2c0d0d"
              }
            ],
            "subnets": [
              "subnet-02376d5aad7190ea8",
              "subnet-068c8ea5573c5f90b",
              "subnet-06b40bd069c2c0d0d"
            ],
            "tags": {
              "Name": "alex-ostrich-59RGAE-elb",
              "Role": "MKE ELB",
              "expire": "2021-03-22T20:10:37Z",
              "kubernetes.io/cluster/alex-ostrich-59RGAE": "shared",
              "platform": "rhel_7.8",
              "project": "ST-SZNG"
            },
            "vpc_id": "vpc-08bdd74f1e58694f1",
            "zone_id": "Z18D5FSROUN65G"
          },
          "dependencies": [
            "module.common.aws_iam_instance_profile.profile",
            "module.common.aws_iam_role.role",
            "module.common.aws_security_group.common",
            "module.common.data.aws_ami.linux",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.network",
            "module.vpc.data.aws_availability_zones.all",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "mke_kube_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:546848686991:listener/net/alex-ostrich-59RGAE-manager-lb/dd77166de82c32f7/1614f493eaf20ced",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:546848686991:targetgroup/alex-ostrich-59RGAE-kube-api/720c95fd96501305",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:546848686991:listener/net/alex-ostrich-59RGAE-manager-lb/dd77166de82c32f7/1614f493eaf20ced",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:546848686991:loadbalancer/net/alex-ostrich-59RGAE-manager-lb/dd77166de82c32f7",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.common.aws_iam_instance_profile.profile",
            "module.common.aws_iam_role.role",
            "module.common.aws_security_group.common",
            "module.common.data.aws_ami.linux",
            "module.elb.aws_lb.mke_manager",
            "module.elb.aws_lb_target_group.mke_kube_api",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.network",
            "module.vpc.data.aws_availability_zones.all",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "mke_manager_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:546848686991:listener/net/alex-ostrich-59RGAE-manager-lb/dd77166de82c32f7/b6729c5ff5234f22",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:546848686991:targetgroup/alex-ostrich-59RGAE-api/d0436d14c8e3fbe6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:546848686991:listener/net/alex-ostrich-59RGAE-manager-lb/dd77166de82c32f7/b6729c5ff5234f22",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:546848686991:loadbalancer/net/alex-ostrich-59RGAE-manager-lb/dd77166de82c32f7",
            "port": 443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.common.aws_iam_instance_profile.profile",
            "module.common.aws_iam_role.role",
            "module.common.aws_security_group.common",
            "module.common.data.aws_ami.linux",
            "module.elb.aws_lb.mke_manager",
            "module.elb.aws_lb_target_group.mke_manager_api",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.network",
            "module.vpc.data.aws_availability_zones.all",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "mke_kube_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:546848686991:targetgroup/alex-ostrich-59RGAE-kube-api/720c95fd96501305",
            "arn_suffix": "targetgroup/alex-ostrich-59RGAE-kube-api/720c95fd96501305",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:546848686991:targetgroup/alex-ostrich-59RGAE-kube-api/720c95fd96501305",
            "lambda_multi_value_headers_enabled": false,
            "name": "alex-ostrich-59RGAE-kube-api",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08bdd74f1e58694f1"
          },
          "dependencies": [
            "module.common.aws_iam_instance_profile.profile",
            "module.common.aws_iam_role.role",
            "module.common.aws_security_group.common",
            "module.common.data.aws_ami.linux",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.network",
            "module.vpc.data.aws_availability_zones.all",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "mke_manager_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:546848686991:targetgroup/alex-ostrich-59RGAE-api/d0436d14c8e3fbe6",
            "arn_suffix": "targetgroup/alex-ostrich-59RGAE-api/d0436d14c8e3fbe6",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:546848686991:targetgroup/alex-ostrich-59RGAE-api/d0436d14c8e3fbe6",
            "lambda_multi_value_headers_enabled": false,
            "name": "alex-ostrich-59RGAE-api",
            "port": 443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08bdd74f1e58694f1"
          },
          "dependencies": [
            "module.common.aws_iam_instance_profile.profile",
            "module.common.aws_iam_role.role",
            "module.common.aws_security_group.common",
            "module.common.data.aws_ami.linux",
            "module.elb.aws_lb.mke_manager",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.network",
            "module.vpc.data.aws_availability_zones.all",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "mke_kube_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:546848686991:targetgroup/alex-ostrich-59RGAE-kube-api/720c95fd96501305-2021031920150794740000000a",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:546848686991:targetgroup/alex-ostrich-59RGAE-kube-api/720c95fd96501305",
            "target_id": "i-0c1710398522bbe82"
          },
          "dependencies": [
            "module.common.aws_iam_instance_profile.profile",
            "module.common.aws_iam_role.role",
            "module.common.aws_security_group.common",
            "module.common.data.aws_ami.linux",
            "module.elb.aws_lb.mke_manager",
            "module.elb.aws_lb_target_group.mke_kube_api",
            "module.managers.aws_security_group.node",
            "module.managers.module.spot.aws_launch_template.linux",
            "module.managers.module.spot.aws_spot_fleet_request.node",
            "module.managers.module.spot.data.aws_ec2_spot_price.current",
            "module.managers.module.spot.data.aws_instances.machines",
            "module.managers.module.spot.data.template_file.linux",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.network",
            "module.vpc.data.aws_availability_zones.all",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "mke_manager_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:546848686991:targetgroup/alex-ostrich-59RGAE-api/d0436d14c8e3fbe6-20210319201507496500000009",
            "port": 443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:546848686991:targetgroup/alex-ostrich-59RGAE-api/d0436d14c8e3fbe6",
            "target_id": "i-0c1710398522bbe82"
          },
          "dependencies": [
            "module.common.aws_iam_instance_profile.profile",
            "module.common.aws_iam_role.role",
            "module.common.aws_security_group.common",
            "module.common.data.aws_ami.linux",
            "module.elb.aws_lb.mke_manager",
            "module.elb.aws_lb_target_group.mke_manager_api",
            "module.managers.aws_security_group.node",
            "module.managers.module.spot.aws_launch_template.linux",
            "module.managers.module.spot.aws_spot_fleet_request.node",
            "module.managers.module.spot.data.aws_ec2_spot_price.current",
            "module.managers.module.spot.data.aws_instances.machines",
            "module.managers.module.spot.data.template_file.linux",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.network",
            "module.vpc.data.aws_availability_zones.all",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.managers",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:546848686991:security-group/sg-0e2c82eedc8896bdc",
            "description": "MKE cluster managers",
            "egress": [],
            "id": "sg-0e2c82eedc8896bdc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 2380
              }
            ],
            "name": "alex-ostrich-59RGAE-managers",
            "name_prefix": "",
            "owner_id": "546848686991",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-08bdd74f1e58694f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.common.aws_iam_instance_profile.profile",
            "module.common.aws_iam_role.role",
            "module.common.aws_security_group.common",
            "module.common.data.aws_ami.linux",
            "module.elb.aws_lb.mke_manager",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.network",
            "module.vpc.data.aws_availability_zones.all",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.msrs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:546848686991:security-group/sg-06b52b8734d5d03f2",
            "description": "MKE cluster msrs",
            "egress": [],
            "id": "sg-06b52b8734d5d03f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alex-ostrich-59RGAE-msrs",
            "name_prefix": "",
            "owner_id": "546848686991",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-08bdd74f1e58694f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.common.aws_iam_instance_profile.profile",
            "module.common.aws_iam_role.role",
            "module.common.aws_security_group.common",
            "module.common.data.aws_ami.linux",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.network",
            "module.vpc.data.aws_availability_zones.all",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:546848686991:internet-gateway/igw-047472f068c233e1e",
            "id": "igw-047472f068c233e1e",
            "owner_id": "546848686991",
            "tags": {
              "Name": "alex-ostrich-59RGAE",
              "project": "ST-SZNG"
            },
            "vpc_id": "vpc-08bdd74f1e58694f1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.network",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06e8ea5dc036a0a7f",
            "owner_id": "546848686991",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-047472f068c233e1e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "alex-ostrich-59RGAE",
              "project": "ST-SZNG"
            },
            "vpc_id": "vpc-08bdd74f1e58694f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gateway",
            "module.vpc.aws_vpc.network",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b40517bb61d82a26",
            "route_table_id": "rtb-06e8ea5dc036a0a7f",
            "subnet_id": "subnet-06b40bd069c2c0d0d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gateway",
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.network",
            "module.vpc.data.aws_availability_zones.all",
            "random_string.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0c2881795d1a308",
            "route_table_id": "rtb-06e8ea5dc036a0a7f",
            "subnet_id": "subnet-068c8ea5573c5f90b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gateway",
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.network",
            "module.vpc.data.aws_availability_zones.all",
            "random_string.random"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068e868e3d00e9a8a",
            "route_table_id": "rtb-06e8ea5dc036a0a7f",
            "subnet_id": "subnet-02376d5aad7190ea8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gateway",
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.network",
            "module.vpc.data.aws_availability_zones.all",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:546848686991:subnet/subnet-06b40bd069c2c0d0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.31.0.0/24",
            "id": "subnet-06b40bd069c2c0d0d",
            "map_public_ip_on_launch": true,
            "owner_id": "546848686991",
            "tags": {
              "Name": "alex-ostrich-59RGAE",
              "expire": "2021-03-22T20:10:37Z",
              "kubernetes.io/cluster/alex-ostrich-59RGAE": "true",
              "project": "ST-SZNG"
            },
            "vpc_id": "vpc-08bdd74f1e58694f1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.network",
            "module.vpc.data.aws_availability_zones.all",
            "random_string.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:546848686991:subnet/subnet-068c8ea5573c5f90b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.31.1.0/24",
            "id": "subnet-068c8ea5573c5f90b",
            "map_public_ip_on_launch": true,
            "owner_id": "546848686991",
            "tags": {
              "Name": "alex-ostrich-59RGAE",
              "expire": "2021-03-22T20:10:37Z",
              "kubernetes.io/cluster/alex-ostrich-59RGAE": "true",
              "project": "ST-SZNG"
            },
            "vpc_id": "vpc-08bdd74f1e58694f1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.network",
            "module.vpc.data.aws_availability_zones.all",
            "random_string.random"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:546848686991:subnet/subnet-02376d5aad7190ea8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.31.2.0/24",
            "id": "subnet-02376d5aad7190ea8",
            "map_public_ip_on_launch": true,
            "owner_id": "546848686991",
            "tags": {
              "Name": "alex-ostrich-59RGAE",
              "expire": "2021-03-22T20:10:37Z",
              "kubernetes.io/cluster/alex-ostrich-59RGAE": "true",
              "project": "ST-SZNG"
            },
            "vpc_id": "vpc-08bdd74f1e58694f1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.network",
            "module.vpc.data.aws_availability_zones.all",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:546848686991:vpc/vpc-08bdd74f1e58694f1",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0a1c06e40ae488171",
            "default_route_table_id": "rtb-026f0332d547421b7",
            "default_security_group_id": "sg-003f7d7797113df41",
            "dhcp_options_id": "dopt-ffd6309a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08bdd74f1e58694f1",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-00e3fc2c3fb2a7f04",
            "ipv6_cidr_block": "2600:1f13:c85:8100::/56",
            "main_route_table_id": "rtb-026f0332d547421b7",
            "owner_id": "546848686991",
            "tags": {
              "Name": "alex-ostrich-59RGAE",
              "project": "ST-SZNG"
            }
          },
          "dependencies": [
            "random_string.random"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.windows_workers",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:546848686991:security-group/sg-0126aa5037fea8f82",
            "description": "mke cluster windows workers",
            "egress": [],
            "id": "sg-0126aa5037fea8f82",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5985,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5986
              }
            ],
            "name": "alex-ostrich-59RGAE-win-workers",
            "name_prefix": "",
            "owner_id": "546848686991",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-08bdd74f1e58694f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.common.aws_iam_instance_profile.profile",
            "module.common.aws_iam_role.role",
            "module.common.aws_security_group.common",
            "module.common.data.aws_ami.linux",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.network",
            "module.vpc.data.aws_availability_zones.all",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.workers",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:546848686991:security-group/sg-0f9002cc34aa056dc",
            "description": "MKE cluster workers",
            "egress": [],
            "id": "sg-0f9002cc34aa056dc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alex-ostrich-59RGAE-workers",
            "name_prefix": "",
            "owner_id": "546848686991",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-08bdd74f1e58694f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.common.aws_iam_instance_profile.profile",
            "module.common.aws_iam_role.role",
            "module.common.aws_security_group.common",
            "module.common.data.aws_ami.linux",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.network",
            "module.vpc.data.aws_availability_zones.all",
            "random_string.random"
          ]
        }
      ]
    }
  ]
}